--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@typescript-eslint/parser": "^4.31.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.17",
+    "babel-plugin-import": "^1.13.3",
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
