--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "axios": "^0.21.4",
+    "classnames": "^2.3.1",
     "lodash": "^4.17.21",
     "react": "17.x",
     "react-dom": "17.x",
