feat: 🎸 (header)顶部导航栏完成
✅ Closes: #14

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "classnames": "^2.3.1",
     "dva-model-extend": "^0.1.2",
     "lodash": "^4.17.21",
+    "qs": "^6.10.1",
     "react": "17.x",
     "react-dom": "17.x",
     "store": "^2.0.12",
@@ -51,6 +52,8 @@
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
     "@types/classnames": "^2.3.1",
+    "@types/lodash": "^4.14.176",
+    "@types/qs": "^6.9.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/store": "^2.0.2",
