--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qs": "^6.10.1",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-markdown": "^7.1.0",
     "store": "^2.0.12",
     "umi": "^3.5.17"
   },
