--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@types/classnames": "^2.3.1",
+    "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.176",
     "@types/qs": "^6.9.7",
     "@types/react": "^17.0.0",
